--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="/dist/styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=M+PLUS+Rounded+1c&family=Outfit:wght@100..900&family=Poppins:wght@100..900&display=swap" rel="stylesheet">
 
-    <title>Gemini</title>
+    <title>Gemino</title>
   </head>
   <body>
     <div id="root"></div>
